# WS-1.85C

./: README.md
00-❗libraries/LVGL_Driver/: LVGL_Driver.h
00-❗libraries/MIC_MSM/: MIC_MSM.cpp
00-❗libraries/SD_Card/: SD_Card.h
00-❗libraries/Wireless/: Wireless.cpp
01-Music & Internet Radio Player/Player-PIO/: README.md  platformio.ini
01-Music & Internet Radio Player/Player-PIO/boards/: WS-ESP32-S3-LCD-1-85C.json
01-Music & Internet Radio Player/Player-PIO/lib/Audio_PCM5101/: AudioConfig.h  Audio_PCM5101.cpp  Audio_PCM5101.h
01-Music & Internet Radio Player/Player-PIO/lib/Display_ST77916/: Display_ST77916.cpp
01-Music & Internet Radio Player/Player-PIO/lib/LVGL_Driver/: LVGL_Driver.cpp
01-Music & Internet Radio Player/Player-PIO/lib/MIC_MSM/: MIC_MSM.h
01-Music & Internet Radio Player/Player-PIO/lib/ui/src/: CMakeLists.txt  filelist.txt  ui.c  ui.h  ui_events.h  ui_helpers.c  ui_helpers.h
01-Music & Internet Radio Player/Player-PIO/lib/ui/src/components/: ui_comp_hook.c
01-Music & Internet Radio Player/Player-PIO/lib/ui/src/images/: ui_img_1224885811.c  ui_img_1779231396.c  ui_img_1799517327.c  ui_img_1898897582.c  ui_img_1947372027.c  ui_img_1997223691.c  ui_img_267335790.c  ui_img_295812069.c
01-Music & Internet Radio Player/Player-PIO/lib/ui/src/screens/: ui_Screen1.c
01-Music & Internet Radio Player/Player-PIO/src/: AudioPlayer.cpp  AudioPlayer.h  RadioStations.h  UIController.cpp  UIController.h  WebRadio.cpp  WebRadio.h  WiFiManager.cpp  WiFiManager.h  main.cpp
01-Music & Internet Radio Player/Player-SLS/: Player.sll  Player.spj
(+2 files in other folders)
