SET(SOURCES screens/ui_Screen1.c
    ui.c
    components/ui_comp_hook.c
    ui_helpers.c
    images/ui_img_1799517327.c
    images/ui_img_1898897582.c
    images/ui_img_1779231396.c
    images/ui_img_1997223691.c
    images/ui_img_1224885811.c
    images/ui_img_267335790.c
    images/ui_img_295812069.c
    images/ui_img_1947372027.c)

add_library(ui ${SOURCES})
